crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__directive_match_child_body.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<div>@match s { Loading => <Spinner /> }</div>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 47,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Tag(
                        "div",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 41,
                            },
                        },
                        value: Match {
                            scrutinee: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 14,
                                    },
                                },
                                value: Var(
                                    "s",
                                ),
                            },
                            arms: [
                                ChildMatchArm {
                                    patterns: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 17,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 24,
                                                },
                                            },
                                            value: Ctor {
                                                path: Path {
                                                    segments: [
                                                        Located {
                                                            region: Region {
                                                                start: Position {
                                                                    line: 1,
                                                                    column: 17,
                                                                },
                                                                end: Position {
                                                                    line: 1,
                                                                    column: 24,
                                                                },
                                                            },
                                                            value: "Loading",
                                                        },
                                                    ],
                                                },
                                                args: [],
                                            },
                                        },
                                    ],
                                    guard: None,
                                    body: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 28,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 39,
                                            },
                                        },
                                        value: ChildBlock {
                                            items: [
                                                Child(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 1,
                                                                column: 28,
                                                            },
                                                            end: Position {
                                                                line: 1,
                                                                column: 39,
                                                            },
                                                        },
                                                        value: Element(
                                                            Element {
                                                                name: Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 1,
                                                                            column: 29,
                                                                        },
                                                                        end: Position {
                                                                            line: 1,
                                                                            column: 36,
                                                                        },
                                                                    },
                                                                    value: Component(
                                                                        Path {
                                                                            segments: [
                                                                                Located {
                                                                                    region: Region {
                                                                                        start: Position {
                                                                                            line: 1,
                                                                                            column: 29,
                                                                                        },
                                                                                        end: Position {
                                                                                            line: 1,
                                                                                            column: 36,
                                                                                        },
                                                                                    },
                                                                                    value: "Spinner",
                                                                                },
                                                                            ],
                                                                        },
                                                                    ),
                                                                },
                                                                attrs: [],
                                                                children: [],
                                                                self_closing: true,
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    },
                                },
                            ],
                        },
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
